Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,28 +9,28 @@ jobs:
       vmImage: 'ubuntu-18.04'
     steps:
     - bash: docker pull centos:7
-    - bash: docker run -it -e LC_ALL=en_US.utf-8 -e LANG=en_US.utf-8 -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:7 /bin/bash
-    - bash: docker exec  -e LC_ALL=en_US.utf-8 -e LANG=en_US.utf-8 --privileged pbsdev .travis/do.sh
+    - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:7 /bin/bash
+    - bash: docker exec   --privileged pbsdev .travis/do.sh
 
   - job: ce8
     pool:
       vmImage: 'ubuntu-18.04'
     steps:
     - bash: docker pull centos:8
-    - bash: docker run -it -e LC_ALL=en_US.utf-8 -e LANG=en_US.utf-8 -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:8 /bin/bash
-    - bash: docker exec  -e LC_ALL=en_US.utf-8 -e LANG=en_US.utf-8 --privileged pbsdev .travis/do.sh
+    - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:8 /bin/bash
+    - bash: docker exec   --privileged pbsdev .travis/do.sh
   - job: s15
     pool:
       vmImage: 'ubuntu-18.04'
     steps:
     - bash: docker pull opensuse/leap:15
-    - bash: docker run -it -e LC_ALL=en_US.utf-8 -e LANG=en_US.utf-8 -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) opensuse/leap:15 /bin/bash
-    - bash: docker exec  -e LC_ALL=en_US.utf-8 -e LANG=en_US.utf-8 --privileged pbsdev .travis/do.sh
+    - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) opensuse/leap:15 /bin/bash
+    - bash: docker exec  --privileged pbsdev .travis/do.sh
 
   - job: u1804
     pool:
       vmImage: 'ubuntu-18.04'
     steps:
     - bash: docker pull ubuntu:18.04
-    - bash: docker run -it -e LC_ALL=en_US.utf-8 -e LANG=en_US.utf-8 -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) ubuntu:18.04 /bin/bash
-    - bash: docker exec  -e LC_ALL=en_US.utf-8 -e LANG=en_US.utf-8 --privileged pbsdev .travis/do.sh
+    - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) ubuntu:18.04 /bin/bash
+    - bash: docker exec   --privileged pbsdev .travis/do.sh
