--- a/test/fw/Makefile.am
+++ b/test/fw/Makefile.am
@@ -91,7 +91,22 @@ dist_ptlmodulelib_PYTHON = \
 	ptl/lib/pbs_api_to_cli.py \
 	ptl/lib/pbs_ifl_mock.py \
 	ptl/lib/pbs_testlib.py \
-	ptl/lib/__init__.py
+	ptl/lib/__init__.py \
+	ptl/lib/ptl_config.py \
+	ptl/lib/ptl_error.py \
+	ptl/lib/ptl_types.py \
+	ptl/lib/ptl_batchutils.py \
+	ptl/lib/ptl_constants.py \
+	ptl/lib/ptl_expect_action.py \
+	ptl/lib/ptl_object.py \
+	ptl/lib/ptl_mom.py \          
+	ptl/lib/ptl_sched.py \
+	ptl/lib/ptl_server.py \
+	ptl/lib/ptl_comm.py \
+	ptl/lib/ptl_entities.py \
+	ptl/lib/ptl_fairshare.py \
+	ptl/lib/ptl_resourceresv.py \
+	ptl/lib/ptl_service.py
 
 ptlmoduleutilsdir = $(ptlmoduledir)/utils
 
