--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,35 +2,44 @@
 # Build your C/C++ project with GCC using make.
 # Add steps that publish test results, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/c-cpp/gcc
+pr:
+  master
+
+pool:
+  vmImage: 'ubuntu-18.04'
 
 jobs:
-  - job: ce7
-    pool:
-      vmImage: 'ubuntu-18.04'
+  - job: c7_build_test
     steps:
+    - bash: .github/runchecks
     - bash: docker pull centos:7
     - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:7 /bin/bash
     - bash: docker exec   --privileged pbsdev .travis/do.sh
 
-  - job: ce8
-    pool:
-      vmImage: 'ubuntu-18.04'
+  - job: c8_build_test
     steps:
+    - bash: .github/runchecks
     - bash: docker pull centos:8
     - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:8 /bin/bash
     - bash: docker exec   --privileged pbsdev .travis/do.sh
-  - job: s15
-    pool:
-      vmImage: 'ubuntu-18.04'
+
+  - job: suse15_build_test
     steps:
+    - bash: .github/runchecks
     - bash: docker pull opensuse/leap:15
     - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) opensuse/leap:15 /bin/bash
     - bash: docker exec  --privileged pbsdev .travis/do.sh
 
-  - job: u1804
-    pool:
-      vmImage: 'ubuntu-18.04'
+  - job: u1804_build_test
     steps:
+    - bash: .github/runchecks
     - bash: docker pull ubuntu:18.04
     - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) ubuntu:18.04 /bin/bash
+    - bash: docker exec   --privileged pbsdev .travis/do.sh
+
+  - job: c7_sanitize_build_test
+    steps:
+    - bash: .github/runchecks
+    - bash: docker pull centos:7
+    - bash: docker run -it -e BUILD_MODE=sanitize -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:7 /bin/bash
     - bash: docker exec   --privileged pbsdev .travis/do.sh
