--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,4 +47,4 @@ jobs:
     - bash: docker pull centos:7
     - bash: docker run -it -e BUILD_MODE=sanitize -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:7 /bin/bash
     #- bash: docker exec   --privileged pbsdev .github/runchecks
-    - bash: docker exec   --privileged pbsdev .travis/do.sh
+    - bash: docker exec   --privileged pbsdev .travis/do_sanitize_mode.sh
