--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ jobs:
   - job: runcheck
     steps:
       - bash: sudo apt-get install -y python3-pep8
+      - bash: which python pep8
       - bash: .github/runchecks
 
   - job: c7_build_test
