--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 jobs:
   - job: runcheck
     steps:
-      - bash: sudo apt-get install -y python3 python-pep8 &&   which pep8
+      - bash: sudo apt-get install -y pep8
       - bash: which python pep8
       - bash: .github/runchecks
 
