--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,20 +32,14 @@ jobs:
     - bash: docker run -it  -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) ubuntu:20.04 /bin/bash
     - bash: docker exec   --privileged pbsdev .travis/do.sh
 
-  - job: c8_sanitize_build_test
+  - job: c7_sanitize_build_test
     steps:
-    - bash: docker pull centos:8
-    - bash: docker run -it -e BUILD_MODE=sanitize -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:8 /bin/bash
+    - bash: docker pull centos:7
+    - bash: docker run -it -e BUILD_MODE=sanitize -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:7 /bin/bash
     - bash: docker exec   --privileged pbsdev .travis/do_sanitize_mode.sh
     
-  - job: suse15_sanitize_build_test
+  - job: c7_kerberos_build
     steps:
-    - bash: docker pull opensuse/leap:15
-    - bash: docker run -it -e BUILD_MODE=sanitize -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) opensuse/leap:15  /bin/bash
-    - bash: docker exec   --privileged pbsdev .travis/do_sanitize_mode.sh
-    
-  - job: u2004_sanitize_build_test
-    steps:
-    - bash: docker pull ubuntu:20.04
-    - bash: docker run -it -e BUILD_MODE=sanitize -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) ubuntu:20.04 /bin/bash
-    - bash: docker exec   --privileged pbsdev .travis/do_sanitize_mode.sh
+    - bash: docker pull centos:7
+    - bash: docker run -it -e BUILD_MODE=kerberos -d -h pbs.dev.local --name pbsdev -v $(pwd):$(pwd) --privileged -w $(pwd) centos:7 /bin/bash
+    - bash: docker exec   --privileged pbsdev .travis/do.sh
