--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -77,6 +77,7 @@ noinst_HEADERS = \
 	mom_server.h \
 	mom_vnode.h \
 	net_connect.h \
+	pbs_api_wrapper.h \
 	pbs_array_list.h \
 	pbs_assert.h \
 	pbs_client_thread.h \
