--- a/src/cmds/scripts/pbs.service.in
+++ b/src/cmds/scripts/pbs.service.in
@@ -66,7 +66,7 @@ IgnoreSIGPIPE=no
 GuessMainPID=no
 ExecStart=@prefix@/libexec/pbs_init.d start
 ExecStop=@prefix@/libexec/pbs_init.d stop
-ExecReload=@prefix@/libexec/pbs_wrap @prefix@/libexec/pbs_init.d start
+ExecReload=@prefix@/libexec/pbs_reload @prefix@/libexec/pbs_init.d start
 TasksMax=infinity
 
 [Install]
