Refactoring lib seccon
rename macro

PTL changes

fix stagin

fix import pbs_ifl

skip test

--- a/configure.ac
+++ b/configure.ac
@@ -335,6 +335,7 @@ PBS_AC_ENABLE_PTL
 PBS_AC_SYSTEMD_UNITDIR
 PBS_AC_WITH_LIBUNDOLR
 PBS_AC_PATCH_LIBTOOL
+PBS_AC_WITH_LIBSEC
 
 AC_CONFIG_FILES([
 	openpbs.spec
