--- a/src/modules/python/Makefile.am
+++ b/src/modules/python/Makefile.am
@@ -101,9 +101,12 @@ _pbs_ifl_la_LDFLAGS = \
 	-shared \
 	-export-dynamic \
 	-avoid-version \
-	-no-undefined
+	-no-undefined \
+	@sec_inc@
 _pbs_ifl_la_LIBADD = \
-	$(top_builddir)/src/lib/Libpbs/libpbs.la
+	$(top_builddir)/src/lib/Libpbs/libpbs.la \
+	$(top_builddir)/src/lib/Libsec/libsec.a \
+	@sec_lib@
 
 pbsmoduledir = $(libdir)/python/altair/pbs
 
