--- a/src/resmom/Makefile.am
+++ b/src/resmom/Makefile.am
@@ -45,22 +45,24 @@ pbs_mom_CPPFLAGS = \
 	-DPBS_MOM \
 	-I$(top_srcdir)/src/include \
 	-I$(top_srcdir)/src/resmom/linux \
+	-I$(top_srcdir)/src/lib/Libsec \
 	@hwloc_flags@ \
 	@hwloc_inc@ \
 	@pmix_inc@ \
 	@libz_inc@ \
 	@PYTHON_INCLUDES@ \
-	@KRB5_CFLAGS@
+	@KRB5_CFLAGS@ \
+	@sec_cflags@
 
 pbs_mom_LDADD = \
 	$(top_builddir)/src/lib/Libattr/libattr.a \
 	$(top_builddir)/src/lib/Liblog/liblog.a \
 	$(top_builddir)/src/lib/Libnet/libnet.a \
 	$(top_builddir)/src/lib/Libpbs/.libs/libpbs.a \
-	$(top_builddir)/src/lib/Libsec/libsec.a \
 	$(top_builddir)/src/lib/Libsite/libsite.a \
 	$(top_builddir)/src/lib/Libtpp/libtpp.a \
 	$(top_builddir)/src/lib/Libutil/libutil.a \
+	$(top_builddir)/src/lib/Libsec/libsec.a \
 	@hwloc_lib@ \
 	@pmix_lib@ \
 	@PYTHON_LDFLAGS@ \
@@ -69,7 +71,8 @@ pbs_mom_LDADD = \
 	-lssl \
 	-lcrypto \
 	@KRB5_LIBS@ \
-	@libundolr_lib@
+	@libundolr_lib@ \
+	@sec_lib@
 
 pbs_mom_SOURCES = \
 	$(top_builddir)/src/lib/Libattr/job_attr_def.c \
