--- a/src/unsupported/Makefile.am
+++ b/src/unsupported/Makefile.am
@@ -71,16 +71,19 @@ dist_unsupported_DATA = \
 pbs_rmget_CPPFLAGS = \
 	-I$(top_srcdir)/src/include \
 	@libz_inc@ \
-	@KRB5_CFLAGS@
+	@KRB5_CFLAGS@ \
+	@sec_cflags@
 
 pbs_rmget_LDADD = \
 	$(top_builddir)/src/lib/Libtpp/libtpp.a \
 	$(top_builddir)/src/lib/Liblog/liblog.a \
 	$(top_builddir)/src/lib/Libnet/libnet.a \
 	$(top_builddir)/src/lib/Libpbs/.libs/libpbs.a \
+	$(top_builddir)/src/lib/Libsec/libsec.a \
 	$(top_builddir)/src/lib/Libutil/libutil.a \
 	-lpthread \
 	@libz_lib@ \
-	@KRB5_LIBS@
+	@KRB5_LIBS@ \
+	@sec_lib@
 
 pbs_rmget_SOURCES = pbs_rmget.c
