--- a/test/fw/Makefile.am
+++ b/test/fw/Makefile.am
@@ -121,6 +121,7 @@ dist_ptlmoduleutils_PYTHON = \
 	ptl/utils/pbs_anonutils.py \
 	ptl/utils/pbs_snaputils.py \
 	ptl/utils/pbs_testusers.py \
+	ptl/utils/pbs_secutils.py \
 	ptl/utils/__init__.py
 
 ptlmoduleutilspluginsdir = $(ptlmoduleutilsdir)/plugins
