--- a/src/lib/Libsec/Makefile.am
+++ b/src/lib/Libsec/Makefile.am
@@ -40,10 +40,10 @@
 #
 
 noinst_LIBRARIES = libsec.a
-
 libsec_a_CPPFLAGS = \
 	-I$(top_srcdir)/src/include \
 	@KRB5_CFLAGS@
 
 libsec_a_SOURCES = \
-	cs_standard.c
+	cs_standard.c \
+	pbs_seccon.c
