--- a/src/scheduler/Makefile.am
+++ b/src/scheduler/Makefile.am
@@ -117,6 +117,7 @@ libpbs_sched_a_SOURCES = \
 	resource_resv.h \
 	resv_info.cpp \
 	resv_info.h \
+	sched_exception.cpp \
 	sched_ifl_wrappers.cpp \
 	server_info.cpp \
 	server_info.h \
