script to create custom snapshot

--- a/test/fw/Makefile.am
+++ b/test/fw/Makefile.am
@@ -81,7 +81,8 @@ dist_ptlbin_SCRIPTS = \
 	bin/pbs_loganalyzer \
 	bin/pbs_snapshot \
 	bin/pbs_config \
-	bin/pbs_compare_results
+	bin/pbs_compare_results \
+	bin/pbs_simsnap
 
 dist_ptlmodule_PYTHON = ptl/__init__.py
 
