fix clags error and update c8 mirrorlist

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         "CentOS 8":
            OS_TYPE: "centos:8"
-           PKG_INSTALL_CMD: "yum -y install python3"
+           PKG_INSTALL_CMD: "sed -i -e 's|mirrorlist=|#mirrorlist=|g' /etc/yum.repos.d/CentOS-* && sed -i -e 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-* && yum -y install python3"
            DOCKER_EXTRA_ARG: ""
            CI_CMD: "./ci --local"
         "OpenSuse 15":
