Avoid hardcoding default configuration variables (#2547)

--- a/src/cmds/scripts/pbs_habitat.in
+++ b/src/cmds/scripts/pbs_habitat.in
@@ -146,7 +146,7 @@ check_hostname() {
 #
 # Start of the pbs_habitat script
 #
-conf=${PBS_CONF_FILE:-/etc/pbs.conf}
+conf=${PBS_CONF_FILE:-@PBS_CONF_FILE@}
 ostype=`uname 2>/dev/null`
 umask 022
 
