address @nithinj comments

--- a/configure.ac
+++ b/configure.ac
@@ -334,6 +334,7 @@ PBS_AC_WITH_LIBZ
 PBS_AC_ENABLE_PTL
 PBS_AC_SYSTEMD_UNITDIR
 PBS_AC_PATCH_LIBTOOL
+PBS_AC_WITH_CJSON
 
 AC_CONFIG_FILES([
 	openpbs.spec
