--- a/src/cmds/Makefile.am
+++ b/src/cmds/Makefile.am
@@ -108,7 +108,8 @@ pbsdsh_LDADD = ${common_libs}
 pbsdsh_SOURCES = pbsdsh.c ${common_sources}
 
 pbsnodes_CPPFLAGS = ${common_cflags}
-pbsnodes_LDADD = ${common_libs}
+pbsnodes_LDADD = ${common_libs} \
+	$(top_builddir)/src/lib/Libjson/libpbsjson.la
 pbsnodes_SOURCES = pbsnodes.c ${common_sources}
 
 pbs_attach_CPPFLAGS = ${common_cflags}
@@ -222,7 +223,8 @@ qsig_LDADD = ${common_libs}
 qsig_SOURCES = qsig.c ${common_sources}
 
 qstat_CPPFLAGS = ${common_cflags}
-qstat_LDADD = ${common_libs}
+qstat_LDADD = ${common_libs} \
+	$(top_builddir)/src/lib/Libjson/libpbsjson.la
 qstat_SOURCES = qstat.c ${common_sources}
 
 qstart_CPPFLAGS = ${common_cflags}
