--- a/src/lib/Libjson/cJSON/Makefile.am
+++ b/src/lib/Libjson/cJSON/Makefile.am
@@ -1,5 +1,4 @@
-#!/bin/bash -xe
-
+#
 # Copyright (C) 1994-2021 Altair Engineering, Inc.
 # For more information, contact Altair at www.altair.com.
 #
@@ -37,42 +36,14 @@
 # "OpenPBS®", "PBS Professional®", and "PBS Pro™" and Altair's logos is
 # subject to Altair's trademark licensing policies.
 
-PBS_DIR=$(readlink -f $0 | awk -F'/ci/' '{print $1}')
-cd ${PBS_DIR}
+noinst_LTLIBRARIES = libpbscjson.la
 
-[ -f /sys/fs/selinux/enforce ] && echo 0 > /sys/fs/selinux/enforce
-yum clean all
-yum -y update
-yum -y install yum-utils epel-release rpmdevtools libasan llvm
-dnf config-manager --set-enabled crb
-rpmdev-setuptree
-yum -y install python3-pip sudo which net-tools man-db time.x86_64 procps
-yum-builddep -y ./*.spec
-yum -y install cmake3 git
-rm -rf cJSON
-git clone https://github.com/DaveGamble/cJSON.git
-cd cJSON; mkdir build; cd build; cmake3 .. -DCMAKE_INSTALL_PREFIX=/usr; make; make install; cd ../../
-./autogen.sh
-rm -rf target-sanitize
-mkdir -p target-sanitize
-cd target-sanitize
-../configure
-make dist
-cp -fv *.tar.gz /root/rpmbuild/SOURCES/
-CFLAGS="-g -O2 -Wall -Werror -fsanitize=address -fno-omit-frame-pointer" CXXFLAGS="-g -O2 -Wall -Werror -fsanitize=address -fno-omit-frame-pointer" rpmbuild -bb --with ptl *.spec
-yum -y install /root/rpmbuild/RPMS/x86_64/*-server-??.*.x86_64.rpm
-yum -y install /root/rpmbuild/RPMS/x86_64/*-debuginfo-??.*.x86_64.rpm
-yum -y install /root/rpmbuild/RPMS/x86_64/*-ptl-??.*.x86_64.rpm
-sed -i "s@PBS_START_MOM=0@PBS_START_MOM=1@" /etc/pbs.conf
-/etc/init.d/pbs start
-set +e
-. /etc/profile.d/ptl.sh
-set -e
-pbs_config --make-ug
-cd /opt/ptl/tests/
-# Ignore address sanitizer link order because of
-# importing pbs python modules (like pbs and pbs_ifl) in ptl.
-# The problem is that original Python bin is not compiled with ASAN.
-# This will not affect pbs service as it has its own env.
-export ASAN_OPTIONS=verify_asan_link_order=0
-pbs_benchpress --tags=smoke
+libpbscjson_la_CPPFLAGS = \
+	-I$(top_srcdir)/src/include \
+	@cjson_inc@
+
+libpbscjson_la_LIBADD = \
+	@cjson_lib@
+
+libpbscjson_la_SOURCES = \
+	pbs_cjson.c
