--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,11 @@ jobs:
     dependsOn: runcheck
     strategy:
       matrix:
+        "Ubuntu 24.04":
+           OS_TYPE: "ubuntu:24.04"
+           PKG_INSTALL_CMD: "apt-get -y update ; apt-get -y upgrade ; apt-get install -y python3"
+           DOCKER_EXTRA_ARG: "-e DEBIAN_FRONTEND=noninteractive -e LANGUAGE=C.UTF-8 -e LANG=C.UTF-8 -e LC_ALL=C.UTF-8"
+           CI_CMD: "./ci --local"
         "Ubuntu 20.04":
            OS_TYPE: "ubuntu:20.04"
            PKG_INSTALL_CMD: "apt-get -y update ; apt-get -y upgrade ; apt-get install -y python3"
